[package]
name = "astria-composer"
version = "0.8.3"
edition = "2021"
rust-version = "1.81.0"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/astriaorg/astria"
homepage = "https://astria.org"

[[bin]]
name = "astria-composer"

[dependencies]
astria-build-info = { path = "../astria-build-info", features = ["runtime"] }
astria-core = { path = "../astria-core", features = [
  "client",
  "serde",
  "server",
] }
astria-eyre = { path = "../astria-eyre" }
config = { package = "astria-config", path = "../astria-config" }
telemetry = { package = "astria-telemetry", path = "../astria-telemetry", features = [
  "display",
] }

tonic-health = "0.10.2"

async-trait = { workspace = true }
axum = { workspace = true }
ethers = { workspace = true, features = ["ws"] }
futures = { workspace = true }
humantime = { workspace = true }
hyper = { workspace = true }
hex = { workspace = true }
itertools = { workspace = true }
pin-project-lite = { workspace = true }
prost = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
rand = { workspace = true }
regex = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = { workspace = true }
tendermint = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = [
  "macros",
  "rt-multi-thread",
  "sync",
  "time",
  "signal",
] }
tokio-util = { workspace = true, features = ["rt"] }
tracing = { workspace = true, features = ["attributes"] }
tryhard = { workspace = true }
tonic = { workspace = true }
tokio-stream = { workspace = true, features = ["net"] }

[dependencies.sequencer-client]
package = "astria-sequencer-client"
path = "../astria-sequencer-client"
features = ["http"]

[dev-dependencies]
astria-grpc-mock = { path = "../astria-grpc-mock" }
config = { package = "astria-config", path = "../astria-config", features = [
  "tests",
] }
test_utils = { package = "astria-test-utils", path = "../astria-test-utils", features = [
  "geth",
] }
insta = { workspace = true, features = ["json"] }
tempfile = { workspace = true }
tokio-test = { workspace = true }
astria-core = { path = "../astria-core", features = ["client"] }
tendermint-rpc = { workspace = true }
wiremock = { workspace = true }

[build-dependencies]
astria-build-info = { path = "../astria-build-info", features = ["build"] }
