[package]
name = "astria-conductor-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
astria-test-utils = { path = "../astria-test-utils" }
eyre = { workspace = true }
k8s-openapi = { workspace = true }
kube = { workspace = true, features = ["client", "runtime"] }
minijinja = { workspace = true }
once_cell = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true, features = [ "macros", "sync", "time" ] }
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
tempfile = { workspace = true }
which = { workspace = true }
