[package]
name = "astria-conductor"
version = "0.13.1"
edition = "2021"
rust-version = "1.73"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/astriaorg/astria"
homepage = "https://astria.org"

[[bin]]
name = "astria-conductor"

[dependencies]
astria-build-info = { path = "../astria-build-info", features = ["runtime"] }
astria-core = { path = "../astria-core", features = ["client", "serde", "brotli"] }
astria-eyre = { path = "../astria-eyre" }
celestia-client = { package = "astria-celestia-client", path = "../astria-celestia-client" }
config = { package = "astria-config", path = "../astria-config" }
merkle = { package = "astria-merkle", path = "../astria-merkle" }
sequencer-client = { package = "astria-sequencer-client", path = "../astria-sequencer-client", features = [
  "websocket",
] }
telemetry = { package = "astria-telemetry", path = "../astria-telemetry", features = [
  "display",
] }

base64 = { workspace = true }
bytes = { workspace = true }
ed25519-consensus = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
humantime = { workspace = true }
indexmap = { workspace = true }
itoa = { workspace = true }
pbjson-types = { workspace = true }
prost = { workspace = true }
rand = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal"] }
tokio-util = { workspace = true, features = ["rt"] }
tonic = { workspace = true, features = ["tls", "tls-roots"] }
tracing = { workspace = true, features = ["valuable"] }
tryhard = { workspace = true }

async-trait = "0.1.73"
futures-bounded = "0.2.3"
http = "0.2.9"
itertools = "0.12.1"
pin-project-lite = "0.2"
tokio-stream = "0.1.14"
tracing-futures = { version = "0.2.5", features = ["futures-03"] }
moka = { version = "0.12.5", features = ["future"] }

[dev-dependencies]
astria-core = { path = "../astria-core", features = ["server", "test-utils", "brotli"] }
astria-grpc-mock = { path = "../astria-grpc-mock" }
config = { package = "astria-config", path = "../astria-config", features = [
  "tests",
] }

insta = { workspace = true, features = ["json"] }
jsonrpsee = { workspace = true, features = ["server"] }
once_cell = { workspace = true }
wiremock = { workspace = true }

chrono = "0.4.35"
tokio-stream = { version = "0.1.15", features = ["net"] }
rand_chacha = "0.3.1"

[build-dependencies]
astria-build-info = { path = "../astria-build-info", features = ["build"] }
