[package]
name = "astria-conductor"
version = "0.14.0"
edition = "2021"
rust-version = "1.73"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/astriaorg/astria"
homepage = "https://astria.org"

[[bin]]
name = "astria-conductor"

[dependencies]
astria-build-info = { path = "../astria-build-info", features = ["runtime"] }
astria-core = { path = "../astria-core", features = [
  "celestia",
  "client",
  "serde",
  "brotli",
] }
astria-eyre = { path = "../astria-eyre" }
config = { package = "astria-config", path = "../astria-config" }
merkle = { package = "astria-merkle", path = "../astria-merkle" }
sequencer-client = { package = "astria-sequencer-client", path = "../astria-sequencer-client", features = [
  "websocket",
] }
telemetry = { package = "astria-telemetry", path = "../astria-telemetry", features = [
  "display",
] }

base64 = { workspace = true }
bytes = { workspace = true }
ed25519-consensus = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
humantime = { workspace = true }
indexmap = { workspace = true }
itertools = { workspace = true }
itoa = { workspace = true }
pbjson-types = { workspace = true }
prost = { workspace = true }
rand = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal"] }
tokio-util = { workspace = true, features = ["rt"] }
tonic = { workspace = true, features = ["tls", "tls-roots"] }
tracing = { workspace = true, features = ["valuable"] }
tryhard = { workspace = true }

async-trait = "0.1.73"
futures-bounded = "0.2.3"
http = "0.2.9"
pin-project-lite = "0.2"
tokio-stream = "0.1.14"
tracing-futures = { version = "0.2.5", features = ["futures-03"] }
moka = { version = "0.12.5", features = ["future"] }

### Celestia specific imports
#
# The crates imported here are all specific to eigerco's celestia APIs
# (including jsonrpsee).
# As none of them are reexported it is important to keep these in sync
# when updating.
celestia-rpc = "0.1.1"
celestia-types = { workspace = true }
jsonrpsee = { version = "0.20", features = ["client-core", "macros"] }

[dev-dependencies]
astria-core = { path = "../astria-core", features = [
  "server",
  "test-utils",
  "brotli",
] }
astria-grpc-mock = { path = "../astria-grpc-mock" }
config = { package = "astria-config", path = "../astria-config", features = [
  "tests",
] }

celestia-tendermint = { workspace = true }
insta = { workspace = true, features = ["json"] }
once_cell = { workspace = true }
wiremock = { workspace = true }

chrono = "0.4.35"
tokio-stream = { version = "0.1.15", features = ["net"] }
rand_chacha = "0.3.1"

[build-dependencies]
astria-build-info = { path = "../astria-build-info", features = ["build"] }
