[package]
name = "astria-config-attribute"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
itertools = "0.11.0"
quote = "1.0.33"
syn = { version = "2.0.37", features = ["extra-traits", "full"] }

[dev-dependencies]
trybuild = { version = "1.0.85", features = ["diff"] }
