[package]
name = "astria-config"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
figment = { version = "0.10.8", features = ["env"] }

once_cell = { workspace = true, optional = true }
regex = { workspace = true, optional = true }
serde = { workspace = true }

[dev-dependencies]
serde = { workspace = true, features = ["derive"] }

[features]
tests = ["figment/test", "dep:once_cell", "dep:regex"]
