[package]
name = "astria-config"
version = "0.1.0"
edition = "2021"
rust-version = "1.83.0"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/astriaorg/astria"
homepage = "https://astria.org"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
figment = { version = "0.10.8", features = ["env"] }

names = { version = "0.14", optional = true, default-features = false }
regex = { workspace = true, optional = true }
serde = { workspace = true }

[dev-dependencies]
serde = { workspace = true, features = ["derive"] }

[features]
tests = ["figment/test", "dep:names", "dep:regex"]
