[package]
name = "astria-core"
version = "0.1.0"
edition = "2021"
rust-version = "1.73"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/astriaorg/astria"
homepage = "https://astria.org"
# TODO
# documentation = ""

categories = ["astria-proto", "astria-rpc", "rpc-types"]
keywords = ["astria", "grpc", "rpc", "blockchain", "execution", "protobuf"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
merkle = { package = "astria-merkle", path = "../astria-merkle" }

bytes = { workspace = true }
celestia-tendermint = { workspace = true }
ed25519-consensus = { workspace = true }
hex = { workspace = true }
ibc-types = { workspace = true }
penumbra-ibc = { workspace = true }
penumbra-proto = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
rand = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"], optional = true }
sha2 = { workspace = true }
tendermint = { workspace = true }
tendermint-proto = { workspace = true }
thiserror = { workspace = true }
tonic = { workspace = true, optional = true }
tracing = { workspace = true }

indexmap = "2.1.0"

[features]
client = ["dep:tonic"]
serde = ["dep:serde"]
server = ["dep:tonic"]
test-utils = ["dep:rand"]

[dev-dependencies]
rand = { workspace = true }
tonic-build = "0.10"
walkdir = "2.4.0"

tempfile = { workspace = true }
which = { workspace = true }
