[package]
name = "astria-core"
version = "0.1.0"
edition = "2021"
rust-version = "1.73"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/astriaorg/astria"
homepage = "https://astria.org"
# TODO
# documentation = ""

categories = ["astria-proto", "astria-rpc", "rpc-types"]
keywords = ["astria", "grpc", "rpc", "blockchain", "execution", "protobuf"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pbjson = { version = "0.6.0", optional = true }

merkle = { package = "astria-merkle", path = "../astria-merkle" }

bytes = { workspace = true }
celestia-tendermint = { workspace = true }
ed25519-consensus = { workspace = true }
ibc-types = { workspace = true }
indexmap = { workspace = true }
pbjson-types = { workspace = true }
penumbra-ibc = { workspace = true }
penumbra-proto = { workspace = true }
prost = { workspace = true }
rand = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"], optional = true }
sha2 = { workspace = true }
tendermint = { workspace = true }
tendermint-proto = { workspace = true }
thiserror = { workspace = true }
tonic = { workspace = true, optional = true }
tracing = { workspace = true }
base64-serde = { workspace = true, optional = true }
base64 = { workspace = true }

[features]
client = ["dep:tonic"]
serde = ["dep:serde", "dep:pbjson", "dep:base64-serde"]
server = ["dep:tonic"]
test-utils = ["dep:rand"]
base64-serde = ["dep:base64-serde"]

[dev-dependencies]
rand = { workspace = true }
tonic-build = "0.10"
walkdir = "2.4.0"
insta = { workspace = true, features = ["json"] }

tempfile = { workspace = true }
which = { workspace = true }
