[package]
name = "astria-core"
version = "0.1.0"
edition = "2021"
rust-version = "1.83.0"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/astriaorg/astria"
homepage = "https://astria.org"
# TODO
# documentation = ""

categories = ["astria-proto", "astria-rpc", "rpc-types"]
keywords = ["astria", "grpc", "rpc", "blockchain", "execution", "protobuf"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
brotli = { version = "5.0.0", optional = true }
pbjson = { version = "0.6.0", optional = true }

astria-core-address = { path = "../astria-core-address" }
astria-core-consts = { path = "../astria-core-consts" }
astria-core-crypto = { path = "../astria-core-crypto" }
merkle = { package = "astria-merkle", path = "../astria-merkle" }

borsh = { workspace = true, features = ["bytes", "derive", "rc"] }
bytes = { workspace = true }
celestia-types = { workspace = true, optional = true }
hex = { workspace = true }
ibc-types = { workspace = true }
indexmap = { workspace = true }
pbjson-types = { workspace = true }
penumbra-ibc = { workspace = true }
penumbra-proto = { workspace = true }
prost = { workspace = true }
rand = { workspace = true, optional = true }
regex = { workspace = true }
serde = { workspace = true, features = ["derive"], optional = true }
serde_json = { workspace = true, optional = true }
sha2 = { workspace = true }
tendermint = { workspace = true }
tendermint-proto = { workspace = true }
thiserror = { workspace = true }
tonic = { workspace = true, optional = true }
tracing = { workspace = true }
base64-serde = { workspace = true, optional = true }
base64 = { workspace = true }

[features]
celestia = ["dep:celestia-types"]
client = ["dep:tonic"]
serde = ["dep:serde", "dep:serde_json", "dep:pbjson", "dep:base64-serde"]
server = ["dep:tonic"]
test-utils = ["dep:rand"]
base64-serde = ["dep:base64-serde"]
brotli = ["dep:brotli"]
# When enabled, this adds constructors for some types that skip the normal constructor validity
# checks. It supports the case where the inputs are already deemed valid, e.g. having read them from
# local storage.
unchecked-constructors = ["astria-core-address/unchecked-constructor"]

[dev-dependencies]
astria-core = { path = ".", features = ["serde"] }
insta = { workspace = true, features = ["json"] }
rand = { workspace = true }
tempfile = { workspace = true }
