[package]
name = "astria-evm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reth-blockchain-tree = { git = "https://github.com/paradigmxyz/reth", rev = "0f14da756f4c04f4e51dff5baaf544445071f74d" }
reth-rpc-builder = { git = "https://github.com/paradigmxyz/reth", rev = "0f14da756f4c04f4e51dff5baaf544445071f74d" }
reth-rpc = { git = "https://github.com/paradigmxyz/reth", rev = "0f14da756f4c04f4e51dff5baaf544445071f74d" }
reth-primitives = { git = "https://github.com/paradigmxyz/reth", rev = "0f14da756f4c04f4e51dff5baaf544445071f74d" }
reth-staged-sync = { git = "https://github.com/paradigmxyz/reth", rev = "0f14da756f4c04f4e51dff5baaf544445071f74d" }
reth-db = { git = "https://github.com/paradigmxyz/reth", rev = "0f14da756f4c04f4e51dff5baaf544445071f74d" }
reth-tracing = { git = "https://github.com/paradigmxyz/reth", rev = "0f14da756f4c04f4e51dff5baaf544445071f74d" }
reth-basic-payload-builder = { git = "https://github.com/paradigmxyz/reth", rev = "0f14da756f4c04f4e51dff5baaf544445071f74d" }
reth-interfaces = { git = "https://github.com/paradigmxyz/reth", rev = "0f14da756f4c04f4e51dff5baaf544445071f74d" }
reth-discv4 = { git = "https://github.com/paradigmxyz/reth", rev = "0f14da756f4c04f4e51dff5baaf544445071f74d" }
reth-transaction-pool = { git = "https://github.com/paradigmxyz/reth", rev = "0f14da756f4c04f4e51dff5baaf544445071f74d" }
reth-provider = { git = "https://github.com/paradigmxyz/reth", rev = "0f14da756f4c04f4e51dff5baaf544445071f74d" }
reth-revm = { git = "https://github.com/paradigmxyz/reth", rev = "0f14da756f4c04f4e51dff5baaf544445071f74d" }
reth-tasks = { git = "https://github.com/paradigmxyz/reth", rev = "0f14da756f4c04f4e51dff5baaf544445071f74d" }
reth-ecies = { git = "https://github.com/paradigmxyz/reth", rev = "0f14da756f4c04f4e51dff5baaf544445071f74d" }
reth-network-api = { git = "https://github.com/paradigmxyz/reth", rev = "0f14da756f4c04f4e51dff5baaf544445071f74d" }
reth-network = { git = "https://github.com/paradigmxyz/reth", rev = "0f14da756f4c04f4e51dff5baaf544445071f74d" }
reth-rpc-engine-api = { git = "https://github.com/paradigmxyz/reth", rev = "0f14da756f4c04f4e51dff5baaf544445071f74d" }
reth-revm-inspectors = { git = "https://github.com/paradigmxyz/reth", rev = "0f14da756f4c04f4e51dff5baaf544445071f74d" }
reth-net-nat = { git = "https://github.com/paradigmxyz/reth", rev = "0f14da756f4c04f4e51dff5baaf544445071f74d" }
reth-consensus-common = { git = "https://github.com/paradigmxyz/reth", rev = "0f14da756f4c04f4e51dff5baaf544445071f74d" }
reth-payload-builder = { git = "https://github.com/paradigmxyz/reth", rev = "0f14da756f4c04f4e51dff5baaf544445071f74d" }
reth-config = { git = "https://github.com/paradigmxyz/reth", rev = "0f14da756f4c04f4e51dff5baaf544445071f74d" }

# crypto
secp256k1 = { version = "0.27.0", features = [
    "global-context",
    "rand-std",
    "recovery",
] }

# # tracing
tracing = "0.1.37"

# io
fdlimit = "0.2.1"
serde = "1.0"
serde_json = "1.0"
shellexpand = "3.0.0"
dirs-next = "2.0.0"
confy = "0.5"
toml = { version = "0.7", features = ["display"] }

# metrics
metrics = "0.20.1"
metrics-exporter-prometheus = "0.11.0"
metrics-util = "0.14.0"

# test vectors generation
proptest = "1.0"

# tui
comfy-table = "6.1.4"
crossterm = "0.25.0"
tui = "0.19.0"
human_bytes = "0.4.1"

# async
tokio = { version = "1.21", features = [
    "sync",
    "macros",
    "time",
    "rt-multi-thread",
] }
futures = "0.3.25"
pin-project = "1.0"

# http/rpc
hyper = "0.14.25"

# misc
eyre = "0.6.8"
clap = { version = "4", features = ["derive", "cargo"] }
num_cpus = "1.13.0"
tempfile = { version = "3.3.0" }
backon = "0.4"
hex = "0.4"
thiserror = "1.0"
pretty_assertions = "1.3.0"

revm = { workspace = true }
revm-primitives = { workspace = true }
