[package]
name = "astria-eyre"
version = "0.1.0"
edition = "2021"
rust-version = "1.83.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6"
itoa = "1.0.10"
anyhow = { version = "1.0.0", optional = true }

[dev-dependencies]
tracing = { workspace = true }
tokio-test = { workspace = true }
tracing-subscriber = "0.3.18"
