[package]
name = "astria-gossipnet"
version = "0.1.0"
edition = "2021"

[dependencies]
libp2p = { version = "0.51", features = ["kad", "gossipsub", "mdns", "noise", "macros", "ping", "tcp", "tokio", "yamux"] }
multiaddr = "0.17"

color-eyre = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal"] }
tracing = { workspace = true }

[features]
default = [ "dht" ]
dht = []
mdns = []
