[package]
name = "astria-gossipnet"
version = "0.1.0"
edition = "2021"

[dependencies]
libp2p = { version = "0.51", features = ["kad", "gossipsub", "identify", "mdns", "noise", "macros", "ping", "tcp", "tokio", "yamux"] }

color-eyre = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
multiaddr = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3.6"
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal", "sync"] }
