[package]
name = "astria-grpc-mock"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert-json-diff = "2.0.2"
erased-serde = "0.4.4"
futures.workspace = true
prost.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio.workspace = true
tonic.workspace = true
tracing.workspace = true
