[package]
name = "astria-merkle"
version = "0.1.0"
edition = "2021"
rust-version = "1.71.1"
license = "MIT OR Apache-2.0"
repository = "https://github.com/astriaorg/astria"
homepage = "https://astria.org"

[dependencies]
serde = { workspace = true, features = ["derive"], optional = true }
sha2 = { workspace = true }

[dev-dependencies]
ct-merkle = "0.1.0"
divan = { workspace = true }
hex-literal = { workspace = true }

[features]
# Used to enable allocation data in benchmarks.
bench_include_allocs = []

[[bench]]
name = "benchmark"
harness = false
