[package]
name = "astria-optimism"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.73"
readme = "README.md"
repository = "https://github.com/astriaorg/astria"
homepage = "https://astria.org"

[dependencies]
astria-eyre = { path = "../astria-eyre" }

ethers = { workspace = true, features = ["optimism", "ethers-solc", "ws"] }
hex = { workspace = true }

[dev-dependencies]
astria-optimism = { path = ".", features = ["test-utils"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[features]
default = []
test-utils = []
