[package]
name = "astria-proto"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/astriaorg/astria"
homepage = "https://astria.org"
# TODO
# documentation = ""

categories = ["astria-proto", "astria-rpc", "rpc-types"]
keywords = ["astria", "grpc", "rpc", "blockchain", "execution", "protobuf"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

ed25519-consensus = { workspace = true, optional = true }
hex = { workspace = true, optional = true }
indexmap = { version = "2.0.1", optional = true }
prost = { workspace = true }
prost-types = { workspace = true }
sha2 = { workspace = true, optional = true }
tendermint = { workspace = true }
tendermint-proto = { workspace = true }
thiserror = { workspace = true }
tonic = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }

[dependencies.celestia-jsonrpc-client]
package = "astria-celestia-jsonrpc-client"
path = "../astria-celestia-jsonrpc-client"
optional = true

[dependencies.sequencer-validation]
package = "astria-sequencer-validation"
path = "../astria-sequencer-validation"
optional = true

[features]
default = ["native"]
celestia = ["dep:celestia-jsonrpc-client"]
client = ["dep:tonic"]
native = [
  "dep:ed25519-consensus",
  "dep:hex",
  "dep:indexmap",
  "dep:sequencer-validation",
  "dep:sha2",
  "dep:tracing",
]
server = ["dep:tonic"]

[dev-dependencies]
tempfile = { workspace = true }
which = { workspace = true }
